@@ -1,6 +1,7 @@
 Version 1.1.0
 - added unlock rule button
 - added delete row button
+- added auto-info-add modal
 
 Version 1.0.11
 - fix sql scripts
